Improve counting of number of confirmed votes